exports[`Helpers extract 1`] = `
Object {
  "__serializedType__": "testType",
  "data": Object {
    "testData": "test",
  },
}
`;

exports[`Helpers extractArray 1`] = `
Object {
  "__serializedType__": "testType",
  "data": Array [
    "Test",
    "Data",
  ],
}
`;

exports[`Helpers extractArray 2`] = `
Object {
  "__serializedType__": "testType",
  "data": Array [
    "T",
    "e",
    "s",
    "t",
    ",",
    "D",
    "a",
    "t",
    "a",
  ],
}
`;

exports[`Helpers mark 1`] = `
Object {
  "__serializedType__": "testType",
  "data": Object {
    "testData": "test",
  },
}
`;

exports[`Helpers mark 2`] = `
Object {
  "__serializedType__": "testType",
  "data": "[object Object]",
}
`;

exports[`Helpers refer 1`] = `
Object {
  "__serializedType__": "testType",
  "data": Object {
    "testData": "test",
  },
}
`;
